--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,15 @@ android {
         jniLibs.srcDir 'libs/native'
         jni.srcDirs = []//disable automatic ndk-build call
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.code.gson:gson:2.3'
+    provided project(':openCVLibrary249')
 }
