--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="hu.bme.aut.smeyelframework" >
 
     <application
+        android:name=".SMEyeLFrameworkApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -17,8 +18,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".functions.communicationtest.CommTestActivity"
+            android:name="hu.bme.aut.smeyelframework.functions.communicationtest.CommTestActivity"
             android:label="@string/title_activity_comm_test"
+            android:parentActivityName="hu.bme.aut.smeyelframework.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="hu.bme.aut.smeyelframework.MainActivity" />
+        </activity>
+        <activity
+            android:name="hu.bme.aut.smeyelframework.functions.communicationtest.TimingTestActivity"
+            android:label="@string/title_activity_timing_test"
             android:parentActivityName="hu.bme.aut.smeyelframework.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
