--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 16
     buildToolsVersion "20.0.0"
 
     defaultConfig {
@@ -33,4 +33,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.code.gson:gson:2.3'
     provided project(':openCVLibrary249')
+    compile 'de.greenrobot:eventbus:2.2.1'
 }
