Can set camera orientation in CameraHelper. LedActivity now uses openCV's JavaCameraView to be able to process preview frames. LedActivity receives Timesync command and sends back a series of brightness values with timestamps. MainActivity connects to OpenCV manager and loads native library.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:name="hu.bme.aut.smeyelframework.functions.LedActivity"
             android:label="@string/title_activity_led"
             android:parentActivityName="hu.bme.aut.smeyelframework.MainActivity"
-            android:screenOrientation="sensorLandscape" >
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="hu.bme.aut.smeyelframework.MainActivity" />
