--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 16
     buildToolsVersion "20.0.0"
-
     defaultConfig {
         applicationId "hu.bme.aut.smeyelframework"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName '1.0.1'
     }
     buildTypes {
         release {
@@ -17,15 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     sourceSets.main {
         jniLibs.srcDir 'libs/native'
         jni.srcDirs = []//disable automatic ndk-build call
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+    productFlavors {
     }
 }
 
