--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ android {
         applicationId "hu.bme.aut.smeyelframework"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 2
-        versionName '1.0.1'
+        versionCode 3
+        versionName '1.0.2'
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
